--- a/client/src/app/modules/accounting/components/accounting-bilan/accounting-bilan.component.html
+++ b/client/src/app/modules/accounting/components/accounting-bilan/accounting-bilan.component.html
@@ -18,60 +18,81 @@
     <div *ngIf="bilan" class="flex-container">
       <div *ngFor="let bilan of bilan" class="flex-child">
         <h1>{{bilan.label}}</h1>
-        <table class="mat-table" *ngIf="bilan">
-          <tr class="mat-header-row">
-            <th class="mat-header-cell"></th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Brut N</th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Brut N-1</th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Amort. / prov. N</th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Amort. / prov. N-1</th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Net N</th>
-            <th class="mat-header-cell" *ngIf="bilan.actifBilan">Net N-1</th>
-            <th class="mat-header-cell" *ngIf="!bilan.actifBilan">Solde N</th>
-            <th class="mat-header-cell" *ngIf="!bilan.actifBilan">Solde N-1</th>
-          </tr>
-          <tr class="mat-row" *ngFor="let item of bilan.items">
-            <td class="mat-cell">{{item.label}}</td>
-            <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.brutN}} €</td>
-            <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.brutN1}} €</td>
-            <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.amortissementN}} €</td>
-            <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.amortissementN1}} €</td>
-            <td class="mat-cell">{{item.soldeN}} €</td>
-            <td class="mat-cell">{{item.soldeN1}} €</td>
+        <table class="mat-table mat-mdc-table mdc-data-table__table" *ngIf="bilan">
+          <thead>
+            <tr class="mat-mdc-header-row mdc-data-table__header-row ">
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell "></th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Brut N</th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Brut N-1</th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Amort. / prov. N
+              </th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Amort. / prov. N-1
+              </th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Net N</th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">Net N-1</th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="!bilan.actifBilan">Solde N</th>
+              <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="!bilan.actifBilan">Solde N-1</th>
+            </tr>
+          </thead>
+          <tr class="mat-mdc-row mdc-data-table__row " *ngFor="let item of bilan.items">
+            <td class="mat-mdc-cell mdc-data-table__cell ">{{item.label}}</td>
+            <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.brutN}} €</td>
+            <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.brutN1}} €</td>
+            <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.amortissementN}} €</td>
+            <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.amortissementN1}} €</td>
+            <td class="mat-mdc-cell mdc-data-table__cell ">{{item.soldeN}} €</td>
+            <td class="mat-mdc-cell mdc-data-table__cell ">{{item.soldeN1}} €</td>
           </tr>
           <ng-container *ngFor="let subtitle of bilan.subTitles">
             <ng-container *ngFor="let item of subtitle.items; let index = index">
-              <tr class="mat-header-row" *ngIf="index==0 &&  subtitle.label!=''">
-                <th class="mat-header-cell" colspan="7">{{subtitle.label}}</th>
+              <thead>
+                <tr class="mat-mdc-header-row mdc-data-table__header-row " *ngIf="index==0 &&  subtitle.label!=''">
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell " colspan="7">{{subtitle.label}}</th>
+                </tr>
+              </thead>
+              <tr class="mat-mdc-row mdc-data-table__row ">
+                <td class="mat-mdc-cell mdc-data-table__cell ">{{item.label}}</td>
+                <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.brutN}} €</td>
+                <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.brutN1}} €</td>
+                <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.amortissementN}} €</td>
+                <td class="mat-mdc-cell mdc-data-table__cell " *ngIf="bilan.actifBilan">{{item.amortissementN1}} €</td>
+                <td class="mat-mdc-cell mdc-data-table__cell ">{{item.soldeN}} €</td>
+                <td class="mat-mdc-cell mdc-data-table__cell ">{{item.soldeN1}} €</td>
               </tr>
-              <tr class="mat-row">
-                <td class="mat-cell">{{item.label}}</td>
-                <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.brutN}} €</td>
-                <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.brutN1}} €</td>
-                <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.amortissementN}} €</td>
-                <td class="mat-cell" *ngIf="bilan.actifBilan">{{item.amortissementN1}} €</td>
-                <td class="mat-cell">{{item.soldeN}} €</td>
-                <td class="mat-cell">{{item.soldeN1}} €</td>
-              </tr>
-              <tr class="mat-header-row" *ngIf="index==subtitle.items.length-1 && subtitle.label!=''">
-                <th class="mat-header-cell">Sous-total - {{subtitle.label}}</th>
-                <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{getBrutN(subtitle)}} €</th>
-                <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{getBrutN1(subtitle)}} €</th>
-                <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{getAmortissementN(subtitle)}} €</th>
-                <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{getAmortissementN1(subtitle)}} €</th>
-                <th class="mat-header-cell">{{getSoldeN(subtitle)}} €</th>
-                <th class="mat-header-cell">{{getSoldeN1(subtitle)}} €</th>
-              </tr>
+              <thead>
+                <tr class="mat-mdc-header-row mdc-data-table__header-row "
+                  *ngIf="index==subtitle.items.length-1 && subtitle.label!=''">
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell ">Sous-total - {{subtitle.label}}</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                    {{getBrutN(subtitle)}} €</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                    {{getBrutN1(subtitle)}} €</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                    {{getAmortissementN(subtitle)}} €</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                    {{getAmortissementN1(subtitle)}} €</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell ">{{getSoldeN(subtitle)}} €</th>
+                  <th class="mat-mdc-header-cell mdc-data-table__header-cell ">{{getSoldeN1(subtitle)}} €</th>
+                </tr>
+              </thead>
             </ng-container>
-            <tr class="mat-header-row" *ngIf="!subtitle.items">
-              <th class="mat-header-cell">{{subtitle.label}}</th>
-              <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{subtitle.brutN}} €</th>
-              <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{subtitle.brutN1}} €</th>
-              <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{subtitle.amortissementN}} €</th>
-              <th class="mat-header-cell" *ngIf="bilan.actifBilan">{{subtitle.amortissementN1}} €</th>
-              <th class="mat-header-cell">{{subtitle.soldeN}} €</th>
-              <th class="mat-header-cell">{{subtitle.soldeN1}} €</th>
-            </tr>
+            <thead>
+              <tr class="mat-mdc-header-row mdc-data-table__header-row " *ngIf="!subtitle.items">
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell ">{{subtitle.label}}</th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">{{subtitle.brutN}}
+                  €
+                </th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                  {{subtitle.brutN1}}
+                  €</th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                  {{subtitle.amortissementN}} €</th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell " *ngIf="bilan.actifBilan">
+                  {{subtitle.amortissementN1}} €</th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell ">{{subtitle.soldeN}} €</th>
+                <th class="mat-mdc-header-cell mdc-data-table__header-cell ">{{subtitle.soldeN1}} €</th>
+              </tr>
+            </thead>
           </ng-container>
         </table>
       </div>
