--- a/client/src/app/modules/accounting/components/accounting-profit-lost/accounting-profit-lost.component.html
+++ b/client/src/app/modules/accounting/components/accounting-profit-lost/accounting-profit-lost.component.html
@@ -61,7 +61,7 @@
           </thead>
         </ng-container>
       </table>
-      <table class="mat-table mat-mdc-table mdc-data-table__table total-table" cdkDrag
+      <table class="mat-table mat-mdc-table mdc-data-table__table total-table min-widht-table" cdkDrag
         [cdkDragFreeDragPosition]="currentUserPosition" (cdkDragEnded)="dropTotalDiv($event)"
         *ngIf="profitAndLostTable.totals">
         <tr class="mat-mdc-header-row mdc-data-table__header-row ">
