--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -20,8 +20,9 @@
     <main>
       <router-outlet></router-outlet>
     </main>
-    <table *ngIf="userNotes && userNotes.length>0" class="mat-table mat-mdc-table mdc-data-table__table notes-table "
-      cdkDrag [cdkDragFreeDragPosition]="currentUserNotePosition" (cdkDragEnded)="dropNoteTable($event)">
+    <table *ngIf="userNotes && userNotes.length>0"
+      class="mat-table mat-mdc-table mdc-data-table__table notes-table min-widht-table" cdkDrag
+      [cdkDragFreeDragPosition]="currentUserNotePosition" (cdkDragEnded)="dropNoteTable($event)">
       <thead>
         <tr class="mat-mdc-header-row mdc-data-table__header-row    drag-cursor" cdkDragHandle>
           <th colspan="3" class="mat-mdc-header-cell mdc-data-table__header-cell icon-row-th ">
