--- a/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
+++ b/client/src/app/modules/accounting/components/accounting-record/accounting-record.component.html
@@ -36,8 +36,9 @@
     </table>
     <sort-table [columns]="displayedColumns" [values]="accountingRecords" tableName="Ecritures" [actions]="tableAction">
     </sort-table>
-    <table mat-table [dataSource]="accumulatedDataSource" class="mat-elevation-z8 table total-table" cdkDrag
-      [cdkDragFreeDragPosition]="currentUserPosition" (cdkDragEnded)="dropTotalDiv($event)" *ngIf="accountingRecords">
+    <table mat-table [dataSource]="accumulatedDataSource" class="mat-elevation-z8 table total-table min-widht-table"
+      cdkDrag [cdkDragFreeDragPosition]="currentUserPosition" (cdkDragEnded)="dropTotalDiv($event)"
+      *ngIf="accountingRecords">
       <ng-container matColumnDef="label">
         <th mat-header-cell *matHeaderCellDef class="without-padding-left">
           <mat-icon color="accent" (click)="restoreDefaultTotalDivPosition()" class="pointer"
