--- a/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.css
+++ b/client/src/app/modules/miscellaneous/components/notification-dialog/notification-dialog.component.css
@@ -48,3 +48,9 @@
   position: absolute;
   right: 15px;
 }
+
+.mat-badge-content {
+  color: transparent !important;
+  top: -2px !important;
+  left: -12px !important;
+}
